# kiro_stage_editor

./: CLAUDE.md  README.md  decode-stage.js  dockerfile  flag_test_analysis.md  flag_test_log.txt  index.html  package-lock.json  package.json  rule.md  start.sh  temp_analysis.js  tsconfig.app.json
.claude/: settings.local.json
.github/workflows/: cd.yaml
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/api_tests/: test_judge_api.py
backend/logic/: find_path.py  place_panels.py  solve.py
backend/models/: grid.py  panel.py  panel_placement.py  path.py
backend/routers/: judge.py  solver.py
backend/tests/: test_find_path.py  test_solve.py
backend/tests/cases/: grid_cases.py
backend/utils/: dump_path_log.py
docs/: 0207-redux概要.md
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/api/: play-simulate.ts
frontend/src/utils/: url.ts  (+2 more)
local-batch/: build.bat  remove.bat
nginx/: default.conf
src/: App.tsx
src/components/: editor-page.tsx  play-page.tsx  puzzle-studio.tsx  solver-page.tsx  types.ts
src/constants/: cell-types.ts
src/hooks/: useMovePointHandler.ts  useMovePositionHandler.ts  useSwapHandler.ts
src/logic/: filter-duplicate-solutions.ts  index.ts  panels.ts  pathfinding.ts  solution-explorer.ts  solver-dfs.ts  solver-rest.ts  solver.ts  utils.ts  wolf-movement.ts
src/pages/: editor-page.tsx
src/schemas/: grid.json
src/store/: index.ts
src/types/: phased-solution.ts
src/utils/: local-storage.ts  url.ts  yaml.ts
(+107 files in other folders)
