[project]
name = "kiro-stage-editor-logic-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Suke-H",email = "hondii1997@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (==0.104.1)",
    "uvicorn (==0.24.0)",
    "pydantic (==2.5.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
datamodel-code-generator = {extras = ["http"], version = "^0.30.1"}

